pma/pma.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - image: phpmyadmin
        name: phpmyadmin
        ports:
        - containerPort: 80
          name: phpmyadmin
